Minor slide tweaks

--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
                            100% { opacity: 1; top: -105px; left: 440px; z-index: 2 } 
 		        }
                         @-moz-keyframes flyin { 
-			   0% { top: -400px; left: -500px }
-                           100% { top: 180px; left: 100px } 
+			   0% { top: 200px; left: -250px }
+                           100% { top: -105px; left: 440px } 
 		        }
                         @-ms-keyframes flyin { 
-			   0% { top: -400px; left: -500px }
-                           100% { top: 180px; left: 100px } 
+			   0% { top: 200px; left: -250px }
+                           100% { top: -105px; left: 440px } 
 		        }
                         @-o-keyframes flyin { 
-			   0% { top: -400px; left: -500px }
-                           100% { top: 180px; left: 100px } 
+			   0% { top: 200px; left: -250px }
+                           100% { top: -105px; left: 440px } 
 		        }
                         @keyframes flyin { 
-			   0% { top: -400px; left: -500px }
-                           100% { top: 180px; left: 100px } 
+			   0% { top: 200px; left: -250px }
+                           100% { top: -105px; left: 440px } 
 		        }
                         .reveal .slides section .fragment.flyin-fromleft.visible {
                             opacity: 1;
@@ -78,7 +78,8 @@
 				<section>
 					<h1>Platforms in the Cloud</h1>
                                         <img src="images/platformoncloud.png" style="width: 800px;"/>
-					<p><a href="http://www.codemiller.com">Katie Miller</a> (<a href="http://twitter.com/codemiller">@codemiller</a>)</p>
+					<p><a href="http://www.codemiller.com">Katie Miller</a> (<a href="http://twitter.com/codemiller">@codemiller</a>)</br>
+                                        OpenShift Developer Advocate at Red Hat</p>
 				</section>
 				<section>
 					<h3><strong>Cloud Computing:</strong> Computing resources delivered as a service over a network</h3>
