--- a/index.html
+++ b/index.html
@@ -100,9 +100,11 @@
 				<section>
                                         <img src="images/chicken-sandwich.jpg" style="width: 470px; padding-right: 20px;"/><img src="images/cloudsandwich.png" style="width: 470px;"/>
 				</section>
+			    <section>
+                                        <img src="images/paas.png"/>
+				</section>
 				<section>
-					<h2>PaaS by Red Hat</h2>
-                                        <img src="images/openshift.jpg" style="width: 500px;"/>
+                                        <img src="images/openshift.png" />
 				</section>
 				<section>
                                         <span style="width: 200px; position: absolute; top: 200px; left: -250px;"><img src="images/appcode.png"/></span>
