--- a/index.html
+++ b/index.html
@@ -32,29 +32,24 @@
                     	.initial-front { z-index: 1; }
 			.initial-back { position: absolute; z-index: 2; }
 	                @-webkit-keyframes flyin { 
-			   0% { opacity: 0; top: 200px; left: -250px; z-index: 2 }
-                           100% { opacity: 1; top: -105px; left: 440px; z-index: 2 } 
+			   0% { opacity: 0; top: 250px; left: -250px; z-index: 2 }
+                           100% { opacity: 1; top: -10px; left: 450px; z-index: 2 } 
 		        }
                         @-moz-keyframes flyin { 
-			   0% { top: 200px; left: -250px }
-                           100% { top: -105px; left: 440px } 
+			   0% { top: 250px; left: -250px }
+                           100% { top: -10px; left: 450px } 
 		        }
                         @-ms-keyframes flyin { 
-			   0% { top: 200px; left: -250px }
-                           100% { top: -105px; left: 440px } 
+			   0% { top: 250px; left: -250px }
+                           100% { top: -10px; left: 450px } 
 		        }
                         @-o-keyframes flyin { 
-			   0% { top: 200px; left: -250px }
-                           100% { top: -105px; left: 440px } 
+			   0% { top: 250px; left: -250px }
+                           100% { top: -10px; left: 450px } 
 		        }
                         @keyframes flyin { 
-			   0% { top: 200px; left: -250px }
-                           100% { top: -105px; left: 440px } 
-		        }
-                        .reveal .slides section .fragment.flyin-fromleft.visible {
-                            opacity: 1;
-                        }
-                        .reveal .slides section .fragment.flyin-fromleft.visible {
+			   0% { top: 250px; left: -250px }
+                           100% { top: -10px; left: 450px } } .reveal .slides section .fragment.flyin-fromleft.visible { opacity: 1; } .reveal .slides section .fragment.flyin-fromleft.visible {
 			    -webkit-animation-name: flyin;
                             -moz-animation-name: flyin;
                             -ms-animation-name: flyin;
@@ -77,7 +72,7 @@
 			<div class="slides">
 				<section>
 					<h1>Platforms in the Cloud</h1>
-                                        <img src="images/platformoncloud.png" style="width: 800px;"/>
+                                        <img src="images/platformoncloud.png" style="width: 600px;"/>
 					<p><a href="http://www.codemiller.com">Katie Miller</a> (<a href="http://twitter.com/codemiller">@codemiller</a>)</br>
                                         OpenShift Developer Advocate at Red Hat</p>
 				</section>
@@ -106,15 +101,21 @@
 				<section>
                                         <img src="images/openshift.png" />
 				</section>
+                <section>
+                    <h2>A Word About Version Control</h2>
+                </section>
+                <section>
+                    <a href="http://commons.wikimedia.org/wiki/File:Git-logo.svg" target="_blank"><img src="images/git.svg" width="600px"/></a>
+                </section>
 				<section>
-                                        <span style="width: 200px; position: absolute; top: 200px; left: -250px;"><img src="images/appcode.png"/></span>
-                                        <span class="fragment" data-fragment-index="1" style="position: absolute; top: 50px; left: 180px;"><img src="images/openshiftrails.png"/></span>
-                                        <span class="fragment" data-fragment-index="2" style="width: 150px; position: absolute; top: 150px; left: -10px;"><img src="images/arrowupright.png"/></span>
-                                        <span class="fragment flyin-fromleft" data-fragment-index="2" style="width: 150px; position: absolute; top: -105px; left: 440px;"><img src="images/appcode.png"/></span>
-                                        <span class="fragment initial-front" data-fragment-index="3" style="width: 350px; position: absolute; top: 180px; right: -300px;"><img src="images/person-computer.png"/></span>
-                                        <span class="fragment" data-fragment-index="5" style="width: 200px; position: absolute; top: 100px; left: 723px;"><img src="images/arrowdownright.png"/></span>
-                                        <span class="fragment" data-fragment-index="4" style="width: 350px; position: absolute; position: absolute; top: 10px; left: 720px;"><img src="images/arrowupleft.png"/></span>
-                                        <span class="fragment initial-back" data-fragment-index="5" style="width: 350px; position: absolute; top: 180px; right: -300px;"><img src="images/person-computer-smiling.png"/></span>
+                                        <span style="width: 100px; position: absolute; top: 200px; left: 0px;"><img src="images/appcode.png"/></span>
+                                        <span class="fragment" data-fragment-index="1" style="position: absolute; top: 100px; left: 170px;"><img src="images/openshiftrails.png"/></span>
+                                        <span class="fragment" data-fragment-index="2" style="width: 75px; position: absolute; top: 100px; left: 140px;"><img src="images/arrowupright.png"/></span>
+                                        <span class="fragment flyin-fromleft" data-fragment-index="2" style="width: 110px; position: absolute; top: -10px; left: 450px;"><img src="images/appcode.png"/></span>
+                                        <span class="fragment initial-front" data-fragment-index="3" style="width: 175px; position: absolute; top: 180px; right: 0px;"><img src="images/person-computer.png"/></span>
+                                        <span class="fragment" data-fragment-index="5" style="width: 100px; position: absolute; top: 120px; right: 150px;"><img src="images/arrowdownright.png"/></span>
+                                        <span class="fragment" data-fragment-index="4" style="width: 175px; position: absolute; position: absolute; top: 70px; right: 80px;"><img src="images/arrowupleft.png"/></span>
+                                        <span class="fragment initial-back" data-fragment-index="5" style="width: 175px; position: absolute; top: 180px; right: 0px;"><img src="images/person-computer-smiling.png"/></span>
                                         
 				</section>
 			</div>
